# SceneBench

./: README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
src/sceneapi_bench/: cli.py  geometry.py
src/scenebench/: cli.py  conformance.py  datasets.py
src/sfmapi_bench/: api_surface.py  cli.py  conformance.py  datasets.py  presets.py
tests/: test_api_surface.py  test_cli.py  test_conformance.py  test_datasets.py  test_geometry.py  test_public_boundary.py
