[project]
name = "sfmapi-bench"
version = "0.1.0"
description = "Reusable benchmark and conformance utilities for sfmapi-compatible backend APIs"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12,<3.13"
dependencies = []

[project.optional-dependencies]
local = [
    "sfmapi>=0.0.1,<0.1",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
sfmapi-bench = "sfmapi_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sfmapi_bench"]

[tool.uv.sources]
sfmapi = { path = "../sfmapi", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT", "RUF"]
ignore = ["E501"]
