[project]
name = "sceneapi-bench"
version = "0.1.0"
description = "Reusable benchmark and conformance utilities for sceneapi-compatible backend APIs"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12,<3.13"
dependencies = []

[project.optional-dependencies]
local = [
    "sceneapi>=0.1.0,<0.2",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

# `sfmapi-bench` is a deprecated alias of the renamed `sceneapi-bench`
# binary, kept for one release (removed in 0.2.0).
[project.scripts]
sceneapi-bench = "sceneapi_bench.cli:main"
sfmapi-bench = "sceneapi_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sceneapi_bench"]

[tool.uv.sources]
sceneapi = { path = "../sfmapi", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT", "RUF"]
ignore = ["E501"]
